Describe your changes here

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                 <!-- SLIDE 1 -->
                 <div class="swiper-slide">
                     <div class="project-card bg-[#1c1c1c] rounded-xl shadow hover:shadow-lg p-4 transition cursor-pointer hover:scale-105"
-                        data-category="react">
+                        data-category="html">
 
                         <img src="image/business_web_banner_30.jpg" class="project-img rounded-lg mb-4"
                             alt="image error">
@@ -280,7 +280,8 @@
                             </p>
                             <div class="flex gap-4">
                                 <a href="calculator-functional.vercel.app" target="_blank">Live Demo</a>
-                                <a href="https://github.com/Aliyank001/calculator.git" target="_blank" rel="noopener">GitHub</a>
+                                <a href="https://github.com/Aliyank001/calculator.git" target="_blank"
+                                    rel="noopener">GitHub</a>
                             </div>
                         </div>
 
@@ -325,7 +326,8 @@
                             </p>
                             <div class="flex gap-4">
                                 <a href="cv-maker-pro-mocha.vercel.app" target="_blank">Live Demo</a>
-                                <a href="https://github.com/Aliyank001/cv-maker.git" target="_blank" rel="noopener">GitHub</a>
+                                <a href="https://github.com/Aliyank001/cv-maker.git" target="_blank"
+                                    rel="noopener">GitHub</a>
                             </div>
                         </div>
 
