--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                     </div>
                 </a>
 
-                <a href="https://www.instagram.com/yourusername" target="_blank" rel="noopener noreferrer"
+                <a href="https://www.instagram.com/aliyan_khan03" target="_blank" rel="noopener noreferrer"
                     class="flex items-center md:items-start gap-3 hover:opacity-80">
                     <i class="ri-instagram-fill text-4xl text-pink-500"></i>
                     <div>
