Describe your changes here

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                                 A fully functional calculator built using HTML, CSS, and JavaScript.
                             </p>
                             <div class="flex gap-4">
-                                <a href="calculator-functional.vercel.app" target="_blank">Live Demo</a>
+                                <a href="https://calculator-functional.vercel.app/" target="_blank" rel="noopener">Live Demo</a>
                                 <a href="https://github.com/Aliyank001/calculator.git" target="_blank"
                                     rel="noopener">GitHub</a>
                             </div>
@@ -302,7 +302,7 @@
                                 Creates strong random passwords using length & character options.
                             </p>
                             <div class="flex gap-4">
-                                <a href="password-generator-pro-theta.vercel.app" target="_blank">Live Demo</a>
+                                <a href="https://password-generator-pro-theta.vercel.app/" target="_blank" rel="noopener">Live Demo</a>
                                 <a href="https://github.com/Aliyank001/password-generator.git" target="_blank"
                                     rel="noopener">GitHub</a>
                             </div>
@@ -325,7 +325,7 @@
                                 Build your professional CV in minutes and land your next interview faster.
                             </p>
                             <div class="flex gap-4">
-                                <a href="cv-maker-pro-mocha.vercel.app" target="_blank">Live Demo</a>
+                                <a href="https://cv-maker-pro-mocha.vercel.app/" target="_blank" rel="noopener">Live Demo</a>
                                 <a href="https://github.com/Aliyank001/cv-maker.git" target="_blank"
                                     rel="noopener">GitHub</a>
                             </div>
