--- a/index.html
+++ b/index.html
@@ -489,7 +489,8 @@
         });
     </script>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js">
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script>
 
 
         var swiper = new Swiper(".mySwiper", {
